fix column overlap

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1985,7 +1985,7 @@ body.TMPreviewScore > .el-tooltip__popper{
 .anisongs .anisong-entry video {
 	cursor: auto;
 	margin-top: 10px;
-	width: 39em;
+	max-width: 100%;
 }
 .search .filter > .icon{
 	display: inline-block;
